--- a/style.css/index.css
+++ b/style.css/index.css
@@ -9,19 +9,51 @@ html {
 }
 
 header {
-    background-image: url(../images/oleg-gospodarec-NxxPdqtHtWs-unsplash.jpg);
-    height: 200px;
-    background-attachment: fixed;
-    box-sizing: border-box;
-
+    background-image: url(../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg)
 }
 
 #header img {
+    justify-content: center;
+    height: 100px;
     width: 90%;
-    display: flex;
+    display:flexbox
+    
+}
+
+h1 {
+    padding-top: 30px;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    color: gold;
 
 
 }
+
+main>h2 {
+    padding-top: 20px;
+    padding-bottom: 50px;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    font-size: 25px;
+    color: gold;
+    background-color: black;
+
+
+}
+
+section>h3 {
+    text-decoration: underline;
+    font-style: italic;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: gold;
+    padding: 2em;
+
+}
+
+
 
 main {
     width: 70vw;
@@ -30,22 +62,38 @@ main {
     padding-top: 2rem;
 }
 
-img {
-    height: 450px;
-    width: 450px;
-    filter: grayscale(30)
+main section:first-of-type {
+    display: flex;
 }
 
-img,
+.piccontainer {
+    width: 300px;
+    height: 200px;
+    filter: grayscale(30);
+    padding: 1em;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.img1 {
+    height: 450px;
+    width: 300px;
+    filter: saturate(15);
+    padding: 2em;
+}
+
 cite {
-    color: white;
+    color: gold;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     padding: 3px;
     font-size: 15px;
-    
-    
-    
+
+
+
 }
 
 p {
@@ -67,30 +115,7 @@ p {
 
 
 
-h1 {
-    padding-top: 60px;
-    justify-content: center;
-    text-align: center;
-    font-family: 'Roboto Mono', monospace;
-    text-shadow: #34495e;
-    
-}
 
-main>h2 {
-    padding-top: 20px;
-    padding-bottom: 50px;
-    text-align: center;
-    font-style: italic;
-    
-}
-
-h3 {
-    text-decoration: underline;
-    font-style: italic;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
 
 p {
     display: flex;
@@ -102,20 +127,13 @@ p {
     background-color: black;
 }
 
-
-
-
-
-
-
-
 li:nth-child(odd) {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     list-style-type: square;
     background-color: #34495e;
+    color: gold;
 }
-
 
 ul,
 li {
@@ -126,5 +144,30 @@ li {
     justify-content: center;
     text-align: center;
     font-size: 16px;
+    line-height: 25px;
 
+
+}
+
+footer {
+    padding: 2em;
+}
+
+/* animation*/
+@keyframes header {
+    0% {
+        background-color: green;
+    }
+
+    25% {
+        background-color: red;
+    }
+
+    50% {
+        background-color: blue;
+    }
+
+    100% {
+        background-color: white;
+    }
 }
